use header/footer in local content; for #86

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <!-- Suggested layout containers / #content -->
   <div id="content">
     <div data-sticky-container>
-      <div id="masthead" class="masthead" data-sticky data-sticky-on="large" data-top-anchor="content:top" data-btm-anchor="content:bottom">
+      <header id="masthead" class="masthead" data-sticky data-sticky-on="large" data-top-anchor="main-content-area:top" data-btm-anchor="main-content-area:bottom">
         <div class="masthead-inner row">
           <!-- local-title -->
           <div class="columns medium-7" id="local-title">
@@ -126,7 +126,7 @@
           </nav>
           <!-- /local-nav -->
         </div>
-      </div>
+      </header>
     </div>
 
     <!-- Your menu structure should make a breadcrumb redundant, but if a breadcrump is needed uncomment the below -->
@@ -153,11 +153,11 @@
     </section>
 
     <!-- Optional local footer (insert citation / project-specific copyright / etc here -->
-    <section id="local-footer" class="local-footer" role="local-footer">
+    <footer id="local-footer" class="local-footer" role="local-footer">
       <div class="row">
         <span class="reference">How to reference this page: ...</span>
       </div>
-    </section>
+    </footer>
     <!-- End optional local footer -->
   </div>
   <!-- End suggested layout containers / #content -->
