Point to style lab

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <li><a href="https://github.com/ebiwd/EBI-Framework/tree/v1.2" class="readmore">Check out the GitHub branch</a></li>
         <li><a href="https://github.com/ebiwd/EBI-Framework/issues/61" class="readmore">Read and discuss the roadmap</a></li>
         <li><a href="https://github.com/ebiwd/EBI-Framework/issues/61" class="readmore">Join one of the bi-weekly drop-in clinics</a></li>
-        <li><a href="https://ebiwd.github.io/EBI-Pattern-library/sample-site-v1.2/" class="readmore">Check out the boilerplate templates</a></li>
+        <li><a href="http://www.ebi.ac.uk/style-lab/websites/sample-site/" class="readmore">Check out the boilerplate templates</a></li>
       </ul>
     </section>
 
