--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
       <p>This is a development implementation of the EBI Visual Framework v1.3; for more information:</p>
       <ul>
         <li><a href="https://github.com/ebiwd/EBI-Framework/tree/v1.3" class="readmore">Check out the GitHub branch</a></li>
-        <li><a href="https://github.com/ebiwd/EBI-Framework/issues/61" class="readmore">Read and discuss the roadmap</a></li>
-        <li><a href="https://github.com/ebiwd/EBI-Framework/issues/61" class="readmore">Join one of the bi-weekly drop-in clinics</a></li>
+        <li><a href="https://github.com/ebiwd/EBI-Framework/issues/103" class="readmore">Read and discuss the roadmap</a></li>
+        <li><a href="https://github.com/ebiwd/EBI-Framework/issues/103" class="readmore">Join a drop-in clinic</a></li>
         <li><a href="http://www.ebi.ac.uk/style-lab/websites/sample-site/" class="readmore">Check out the boilerplate templates</a></li>
       </ul>
     </section>
