--- a/index.html
+++ b/index.html
@@ -53,15 +53,8 @@
   <link rel="stylesheet" href="css/theme-embl-petrol.css" type="text/css" media="all" />
 </head>
 
-<body class="level2"><!-- add any of your classes or IDs -->
-  <div id="skip-to">
-    <ul>
-      <li><a href="#content">Skip to main content</a></li>
-      <li><a href="#local-nav">Skip to local navigation</a></li>
-      <li><a href="#global-nav">Skip to EBI global navigation menu</a></li>
-      <li><a href="#global-nav-expanded">Skip to expanded EBI global navigation menu (includes all sub-sections)</a></li>
-    </ul>
-  </div>
+<body>
+  <div id="skip-to"><a href="#content">Skip to main content</a></div>
 
   <header id="masthead-black-bar" class="clearfix masthead-black-bar">
     <nav class="row">
