--- a/index.html
+++ b/index.html
@@ -34,9 +34,7 @@
   <meta name="msapplication-TileImage" content="https://wwwdev.ebi.ac.uk/web_guidelines/EBI-Framework/v1.3/images/logos/EMBL-EBI/favicons/mstile-144x144.png" />
 
   <!-- CSS: implied media=all -->
-  <!-- CSS concatenated and minified via ant build script-->
-  <link rel="stylesheet" href="libraries/foundation-6/css/foundation.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="css/ebi-global.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="css/ebi-global.min.css" type="text/css" media="all" />
   <link rel="stylesheet" href="https://www.ebi.ac.uk/web_guidelines/EBI-Icon-fonts/v1.2/fonts.css" type="text/css" media="all" />
 
   <!-- Use this CSS file for any custom styling -->
@@ -81,78 +79,76 @@
   </header>
 
   <!-- Suggested layout containers / #content -->
-  <div id="content">
-    <div data-sticky-container>
-      <header id="masthead" class="masthead" data-sticky data-sticky-on="large" data-top-anchor="main-content-area:top" data-btm-anchor="main-content-area:bottom">
-        <div class="masthead-inner row">
-          <!-- local-title -->
-          <div class="columns medium-7" id="local-title">
-            <h1><a href="[service-url]" title="Back to [service-name] homepage">EBI Framework</a></h1>
-          </div>
-          <!-- /local-title -->
-
-          <!-- local-nav -->
-          <nav>
-            <ul id="local-nav" class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
-              <li class="active"><a href="#">Overview</a></li>
-            </ul>
-            <ul class="menu dropdown float-right" data-dropdown-menu data-description="functional">
-              <li class="functional"><a href="#"><i class="icon icon-generic" data-icon="d"></i> Share this</a>
-              <ul class="menu js">
-                <li><a href="#">Item 1A Loooong</a></li>
-                <li>
-                  <a href='#'> Item 1 sub</a>
-                  <ul class='menu'>
-                    <li><a href='#'>Item 1 subA</a></li>
-                    <li><a href='#'>Item 1 subB</a></li>
-                    <li>
-                      <a href='#'> Item 1 sub</a>
-                      <ul class='menu'>
-                        <li><a href='#'>Item 1 subA</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li><a href="#">Item 1B</a></li>
-              </ul>
-            </ul>
-          </nav>
-          <!-- /local-nav -->
+  <div data-sticky-container>
+    <header id="masthead" class="masthead" data-sticky data-sticky-on="large" data-top-anchor="content:top" data-btm-anchor="content:bottom">
+      <div class="masthead-inner row">
+        <!-- local-title -->
+        <div class="columns medium-9" id="local-title">
+          <h1><a href="[service-url]" title="Back to [service-name] homepage">EBI Visual Framework</a></h1>
         </div>
-      </header>
-    </div>
+        <!-- /local-title -->
 
-    <!-- Your menu structure should make a breadcrumb redundant, but if a breadcrump is needed uncomment the below -->
-    <nav aria-label="You are here:" role="navigation" class="row">
-      <ul class="breadcrumbs">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Parent</a></li>
-        <li class="disabled">Disabled</li>
-        <li>
-          <span class="show-for-sr">Current: </span> This page
-        </li>
-      </ul>
-    </nav>
-
-    <section id="main-content-area" class="row" role="main">
-      <h2>EBI Visual Framework</h2>
-      <p>This is a development implementation of the EBI Visual Framework v1.3; for more information:</p>
-      <ul>
-        <li><a href="https://github.com/ebiwd/EBI-Framework/tree/v1.3" class="readmore">Check out the GitHub branch</a></li>
-        <li><a href="https://github.com/ebiwd/EBI-Framework/issues/103" class="readmore">Read and discuss the roadmap</a></li>
-        <li><a href="https://github.com/ebiwd/EBI-Framework/issues/103" class="readmore">Join a drop-in clinic</a></li>
-        <li><a href="http://www.ebi.ac.uk/style-lab/websites/sample-site/" class="readmore">Check out the boilerplate templates</a></li>
-      </ul>
-    </section>
-
-    <!-- Optional local footer (insert citation / project-specific copyright / etc here -->
-    <footer id="local-footer" class="local-footer" role="local-footer">
-      <div class="row">
-        <span class="reference">How to reference this page: ...</span>
+        <!-- local-nav -->
+        <nav>
+          <ul id="local-nav" class="dropdown menu float-left" data-description="navigational" data-dropdown-menu>
+            <li class="active"><a href="#">Overview</a></li>
+          </ul>
+          <ul class="menu dropdown float-right" data-dropdown-menu data-description="functional">
+            <li class="functional"><a href="#"><i class="icon icon-generic" data-icon="d"></i> Share this</a>
+            <ul class="menu js">
+              <li><a href="#">Item 1A Loooong</a></li>
+              <li>
+                <a href='#'> Item 1 sub</a>
+                <ul class='menu'>
+                  <li><a href='#'>Item 1 subA</a></li>
+                  <li><a href='#'>Item 1 subB</a></li>
+                  <li>
+                    <a href='#'> Item 1 sub</a>
+                    <ul class='menu'>
+                      <li><a href='#'>Item 1 subA</a></li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li><a href="#">Item 1B</a></li>
+            </ul>
+          </ul>
+        </nav>
+        <!-- /local-nav -->
       </div>
-    </footer>
-    <!-- End optional local footer -->
+    </header>
   </div>
+
+  <!-- Your menu structure should make a breadcrumb redundant, but if a breadcrump is needed uncomment the below -->
+  <nav aria-label="You are here:" role="navigation" class="row">
+    <ul class="breadcrumbs">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Parent</a></li>
+      <li class="disabled">Disabled</li>
+      <li>
+        <span class="show-for-sr">Current: </span> This page
+      </li>
+    </ul>
+  </nav>
+
+  <section id="content" class="row" role="main">
+    <h2>This is v1.3</h2>
+    <p>This is a development implementation of the EBI Visual Framework v1.3; for more information:</p>
+    <ul>
+      <li><a href="https://github.com/ebiwd/EBI-Framework/tree/v1.3" class="readmore">Check out the GitHub branch</a></li>
+      <li><a href="https://github.com/ebiwd/EBI-Framework/issues/103" class="readmore">Read and discuss the roadmap</a></li>
+      <li><a href="https://github.com/ebiwd/EBI-Framework/issues/103" class="readmore">Join a drop-in clinic</a></li>
+      <li><a href="http://www.ebi.ac.uk/style-lab/websites/sample-site/" class="readmore">Check out the boilerplate templates</a></li>
+    </ul>
+  </section>
+
+  <!-- Optional local footer (insert citation / project-specific copyright / etc here -->
+  <footer id="local-footer" class="local-footer" role="local-footer">
+    <div class="row">
+      <span class="reference">How to reference this page: ...</span>
+    </div>
+  </footer>
+  <!-- End optional local footer -->
   <!-- End suggested layout containers / #content -->
 
   <footer>
