Only savages use single quotes in html

--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
             <ul class="menu js">
               <li><a href="#">Item 1A Loooong</a></li>
               <li>
-                <a href='#'> Item 1 sub</a>
-                <ul class='menu'>
-                  <li><a href='#'>Item 1 subA</a></li>
-                  <li><a href='#'>Item 1 subB</a></li>
+                <a href="#"> Item 1 sub</a>
+                <ul class="menu">
+                  <li><a href="#">Item 1 subA</a></li>
+                  <li><a href="#">Item 1 subB</a></li>
                   <li>
-                    <a href='#'> Item 1 sub</a>
-                    <ul class='menu'>
-                      <li><a href='#'>Item 1 subA</a></li>
+                    <a href="#"> Item 1 sub</a>
+                    <ul class="menu">
+                      <li><a href="#">Item 1 subA</a></li>
                     </ul>
                   </li>
                 </ul>
