Iterate on black bar facets

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Project home
-active_facet: Research
+embl_active: Research
 group: "in_local_navigation"
 order: 1
 ---
