--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 ---
 layout: default
 title: Project home
-embl_active: Research
+embl_rational: 0
+embl_external: 0
+embl_active: "where:ebi"
+embl_parent_1: "none"
+embl_parent_2: "none"
 group: "in_local_navigation"
 order: 1
 ---
