--- a/css/styleguide/item-components-button.html
+++ b/css/styleguide/item-components-button.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="kss-assets/kss.css">
-  <link rel="stylesheet" href="https://wwwdev.ebi.ac.uk/web_guidelines/EBI-Framework/v1.3/css/ebi-global.css">
+  <link rel="stylesheet" href="https://ebi.emblstatic.net/web_guidelines/EBI-Framework/v1.3/css/ebi-global.css">
 
 </head>
 <body id="kss-node" class="kss-fullscreen-mode">
