--- a/css/styleguide/item-components-button.html
+++ b/css/styleguide/item-components-button.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width">
 
   <link rel="stylesheet" href="kss-assets/kss.css">
-  <link rel="stylesheet" href="https://ebi.emblstatic.net/web_guidelines/EBI-Framework/v1.3/css/ebi-global.css">
+  <link rel="stylesheet" href="https://dev.ebi.emblstatic.net/web_guidelines/EBI-Framework/v1.3/css/ebi-global.css">
 
 </head>
 <body id="kss-node" class="kss-fullscreen-mode">
@@ -126,7 +126,7 @@
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>ebi-css-build/ebi-global.scss</code>, line 308
+          Source: <code>ebi-css-build/_ebi_base_styles.scss</code>, line 202
         </div>
 
     </div>
