--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ group: "in_local_navigation"
 order: 1
 ---
 <h2>This is v1.3</h2>
-<p>This is a development implementation of the EBI Visual Framework v1.3; for more information:</p>
+<p>For more information:</p>
 <ul>
   <li><a href="https://github.com/ebiwd/EBI-Framework/tree/v1.3" class="readmore">Check out the GitHub branch</a></li>
   <li><a href="https://github.com/ebiwd/EBI-Framework/issues/103" class="readmore">Read and discuss the roadmap</a></li>
