--- a/local-dev.html
+++ b/local-dev.html
@@ -140,12 +140,11 @@
   </footer>
 
   <!-- JavaScript -->
-  <script>window.jQuery || document.write('<script src="js/libs/jquery-1.10.2.min.js"><\/script>')</script>
-
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script defer="defer" src="js/script.js"></script>
 
   <!-- The Foundation theme JavaScript -->
-  <script src="js/foundation.js"></script>
+  <script src="libraries/foundation-6/js/foundation.js"></script>
   <script src="js/foundationExtendEBI.js"></script>
   <script type="text/JavaScript">$(document).foundation();</script>
   <script type="text/JavaScript">$(document).foundationExtendEBI();</script>
