--- a/local-dev.html
+++ b/local-dev.html
@@ -59,7 +59,7 @@
   <!-- end CSS-->
 </head>
 
-<body class="level2"><!-- add any of your classes or IDs -->
+<body class="level2" data-protection-message-disable="false"><!-- add any of your classes or IDs -->
   <div id="skip-to">
     <a href="#content">Skip to main content</a>
   </div>
