Fixed the logo with original css and hidden text

--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
   <script>window.jQuery || document.write('<script src="../js/libs/jquery-1.10.2.min.js"><\/script>')</script>
   -->
 
-  <script defer="defer" src="//dev.ebi.emblstatic.net/web_guidelines/EBI-Framework/v1.4/js/script.js"></script>
-
+  <script defer="defer" src="js/script.js"></script>
   <!-- The Foundation theme JavaScript -->
   <script src="//dev.ebi.emblstatic.net/web_guidelines/EBI-Framework/v1.4/libraries/foundation-6/js/foundation.js"></script>
   <script src="//dev.ebi.emblstatic.net/web_guidelines/EBI-Framework/v1.4/js/foundationExtendEBI.js"></script>
